Fix call to action spacing on small screens

--- a/src/layout/components/calltoaction.sass
+++ b/src/layout/components/calltoaction.sass
@@ -8,6 +8,10 @@
   align-items: center
   justify-content: center
 
+  +media($breakpoint-sm)
+    height: auto
+    padding: 48px 0
+
 .call-to-action__header
   font-size: 32px
   font-weight: 400
